[tool.poetry]
name = "streamlit-darts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
darts = "^0.28.0"
streamlit = "^1.33.0"
watchdog = "^4.0.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
